抽公共脚手架消除BenchRoleTimer/TestRoleTimer重复(~110行)：新增Zezex.ZezexTestEnv(public实例组件)持有clients/links/servers与LoginQueue启停(prepareNewEnvironment含逐linkd就绪轮询/stopAll含半启动防护)+静态RPC助手(auth/getRole/createRole/login/logout)。两个消费方各自只留差异件：TestRoleTimer保留timerFuture/handles/relogin/sleep/log；BenchRoleTimer保留batch机器。scope决定：TestGameTimer/TestOnlineSpec的分叉副本(websocket拨段等)待API长钩子后迁入，TODO记在类注释。继续验证走既有验收流水线。