@@ -1,23 +1,12 @@
 package Zezex;
 
-import java.util.ArrayList;
-import java.util.concurrent.atomic.AtomicInteger;
-
-import ClientGame.Login.BRole;
-import ClientGame.Login.CreateRole;
-import ClientGame.Login.GetRoleList;
 import UnitTest.Zeze.Component.TestBean;
-import Zeze.Builtin.Game.Online.Logout;
-import Zeze.Builtin.LoginQueue.BLoginToken;
 import Zeze.Component.TimerContext;
 import Zeze.Component.TimerHandle;
 import Zeze.Component.TimerSpec;
-import Zeze.Services.LoginQueue;
-import Zeze.Transaction.EmptyBean;
 import Zeze.Transaction.Procedure;
 import Zeze.Util.Task;
 import Zeze.Util.TaskCompletionSource;
-import Zezex.Linkd.Auth;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.jetbrains.annotations.NotNull;
@@ -30,90 +19,7 @@ import org.junit.jupiter.api.Test;
 public class TestRoleTimer {
 	private static final @NotNull Logger logger = LogManager.getLogger(TestRoleTimer.class);
 
-	final ArrayList<ClientGame.App> clients = new ArrayList<>();
-	final ArrayList<Zezex.App> links = new ArrayList<>();
-	final ArrayList<Game.App> servers = new ArrayList<>();
-	LoginQueue loginQueue;
-
-	private void prepareNewEnvironment(int clientCount, int linkCount, int serverCount) throws Exception {
-		clients.clear();
-		links.clear();
-		servers.clear();
-
-		loginQueue = new LoginQueue();
-		loginQueue.start();
-
-		for (int i = 0; i < clientCount; ++i)
-			clients.add(new ClientGame.App());
-		for (int i = 0; i < linkCount; ++i)
-			links.add(new Zezex.App());
-		for (int i = 0; i < serverCount; ++i)
-			servers.add(new Game.App());
-
-		for (int i = 0; i < linkCount; ++i)
-			links.get(i).Start(-(i + 1), 12000 + i, 15000 + i);
-		for (int i = 0; i < serverCount; ++i) {
-			servers.get(i).Start(i + 40, 20000 + i);
-			//servers.get(i).getZeze().getTimer().initializeOnlineTimer(servers.get(i).ProviderApp);
-			//servers.get(i).getZeze().getTimer().start();
-		}
-		for (var link : links)
-			harness.TestEnv.waitServerRegistered(link.Zeze, 40, 39 + serverCount); // 等所有provider注册可见（替代盲等1秒）
-		//var link = links.getFirst();
-		//var ipPort = link.LinkdService.getOnePassiveAddress();
-		/*
-		for (var client : clients)
-			client.Start("", 0); // 启用了LoginQueue以后，link参数不再使用。
-		/*/
-		var clientsSize = new AtomicInteger(clients.size());
-		clients.parallelStream().forEach(c -> {
-			try {
-				c.Start("", 0); // 启用了LoginQueue以后，link参数不再使用。
-				clientsSize.decrementAndGet();
-			} catch (Exception e) {
-				throw new RuntimeException(e);
-			}
-		});
-		while (clientsSize.get() != 0)
-			Thread.onSpinWait();
-		// */
-		//for (int i = 0; i < clientCount; ++i) {
-		//	clients.get(i).Start(ipPort.getKey(), ipPort.getValue());
-		//}
-		//for (int i = 0; i < clientCount; ++i)
-		//	clients.get(i).Connector.WaitReady();
-	}
-
-	private void stopAll() throws Exception {
-		try {
-			for (var client : clients)
-				client.Stop();
-			for (var server : servers) {
-				if (server.Zeze != null) // 半启动（Start 中途失败/未调用）的 server，跳过避免 NPE 掩盖真正的失败原因
-					server.stopBeforeModules();
-			}
-			for (var server : servers) {
-				if (server.Zeze != null)
-					server.Stop();
-			}
-			for (var link : links) {
-				try {
-					link.Stop();
-				} catch (Exception e) {
-					logger.error("stop link failed", e);
-				}
-			}
-		} finally {
-			// 无论如何都要释放 5020/5021 端口，否则会毒化后续使用 LoginQueue 的测试
-			if (loginQueue != null) {
-				loginQueue.stop();
-				loginQueue = null;
-			}
-			clients.clear();
-			links.clear();
-			servers.clear();
-		}
-	}
+	final ZezexTestEnv env = new ZezexTestEnv();
 
 	private static void testContent(TimerContext context) {
 		TestBean bean = (TestBean)context.customData;
@@ -149,21 +55,21 @@ public class TestRoleTimer {
 
 		try {
 			log("Role Online Timer 初始化测试环境");
-			prepareNewEnvironment(2, 2, 1);
+			env.prepareNewEnvironment(2, 2, 1);
 
-			var client0 = clients.get(0);
-			var client1 = clients.get(1);
-			var link0 = links.get(0);
-			var link1 = links.get(1);
-			var server0 = servers.getFirst();
+			var client0 = env.clients.get(0);
+			var client1 = env.clients.get(1);
+			var link0 = env.links.get(0);
+			var link1 = env.links.get(1);
+			var server0 = env.servers.getFirst();
 			var timer0 = server0.getZeze().getTimer();
 
 			log("测试 Role Online Timer ");
 			log("在客户端0登录role0");
-			auth(client0.onLinkConnectedFuture.get(), client0, "account0");
-			var role = getRole(client0);
-			var roleId = null != role ? role.getId() : createRole(client0, "role0");
-			login(client0, roleId);
+			ZezexTestEnv.auth(client0.onLinkConnectedFuture.get(), client0, "account0");
+			var role = ZezexTestEnv.getRole(client0);
+			var roleId = null != role ? role.getId() : ZezexTestEnv.createRole(client0, "role0");
+			ZezexTestEnv.login(client0, roleId);
 
 			var timerRole0 = timer0.getRoleTimer();
 			Assertions.assertEquals(Procedure.Success, server0.Zeze.newProcedure(() -> {
@@ -184,8 +90,8 @@ public class TestRoleTimer {
 			log("测试一通过");
 
 			log("在客户端1登录role0，踢掉客户端0的登录");
-			auth(client1.onLinkConnectedFuture.get(), client1, "account0");
-			login(client1, roleId);
+			ZezexTestEnv.auth(client1.onLinkConnectedFuture.get(), client1, "account0");
+			ZezexTestEnv.login(client1, roleId);
 			Assertions.assertTrue(bean.getTestValue() > 0); // 确保客户端0的timer被踢掉了
 			log("测试二通过");
 
@@ -221,10 +127,10 @@ public class TestRoleTimer {
 			newNamedBean2.getFuture().await();
 			log("测试三通过");
 
-			logout(client1, roleId);
+			ZezexTestEnv.logout(client1, roleId);
 			sleep(200, 5);
 		} finally {
-			stopAll();
+			env.stopAll();
 		}
 	}
 
@@ -234,21 +140,21 @@ public class TestRoleTimer {
 
 		try {
 			log("Role Online Timer 初始化测试环境");
-			prepareNewEnvironment(2, 2, 1);
+			env.prepareNewEnvironment(2, 2, 1);
 
-			var client0 = clients.get(0);
-			var client1 = clients.get(1);
-			var link0 = links.get(0);
-			var link1 = links.get(1);
-			var server0 = servers.getFirst();
+			var client0 = env.clients.get(0);
+			var client1 = env.clients.get(1);
+			var link0 = env.links.get(0);
+			var link1 = env.links.get(1);
+			var server0 = env.servers.getFirst();
 			var timer0 = server0.getZeze().getTimer();
 
 			log("测试 Role Online Timer ");
 			log("在客户端0登录role0");
-			auth(client0.onLinkConnectedFuture.get(), client0, "account0");
-			var role = getRole(client0);
-			var roleId = role != null ? role.getId() : createRole(client0, "new_role0");
-			login(client0, roleId);
+			ZezexTestEnv.auth(client0.onLinkConnectedFuture.get(), client0, "account0");
+			var role = ZezexTestEnv.getRole(client0);
+			var roleId = role != null ? role.getId() : ZezexTestEnv.createRole(client0, "new_role0");
+			ZezexTestEnv.login(client0, roleId);
 
 			var timerRole0 = timer0.getRoleTimer();
 
@@ -265,8 +171,8 @@ public class TestRoleTimer {
 			log("测试一通过");
 
 			log("在客户端1登录role0，踢掉客户端0的登录");
-			auth(client1.onLinkConnectedFuture.get(), client1, "account0");
-			login(client1, roleId);
+			ZezexTestEnv.auth(client1.onLinkConnectedFuture.get(), client1, "account0");
+			ZezexTestEnv.login(client1, roleId);
 			sleep(1000, 1);
 			Assertions.assertTrue(bean.getTestValue() > 0); // 确保客户端0的timer被踢掉了
 			log("测试二通过");
@@ -305,10 +211,10 @@ public class TestRoleTimer {
 			newNamedBean2.getFuture().await();
 			log("测试三通过");
 
-			logout(client1, roleId);
+			ZezexTestEnv.logout(client1, roleId);
 			sleep(100, 2);
 		} finally {
-			stopAll();
+			env.stopAll();
 		}
 	}
 
@@ -327,14 +233,14 @@ public class TestRoleTimer {
 			log("Role Offline Timer 测试启动");
 
 			// 初始化环境
-			prepareNewEnvironment(2, 2, 2);
+			env.prepareNewEnvironment(2, 2, 2);
 
-			var client0 = clients.get(0);
-			var client1 = clients.get(1);
-			var link0 = links.get(0);
-			var link1 = links.get(1);
-			var server0 = servers.get(0);
-			var server1 = servers.get(1);
+			var client0 = env.clients.get(0);
+			var client1 = env.clients.get(1);
+			var link0 = env.links.get(0);
+			var link1 = env.links.get(1);
+			var server0 = env.servers.get(0);
+			var server1 = env.servers.get(1);
 			var timer0 = server0.getZeze().getTimer();
 			var timer1 = server1.getZeze().getTimer();
 
@@ -343,15 +249,15 @@ public class TestRoleTimer {
 
 			// 注册登录客户端0
 			log("注册登录客户端0");
-			auth(client0.onLinkConnectedFuture.get(), client0, "account0");
-			var role = getRole(client0);
-			var roleId = null != role ? role.getId() : createRole(client0, "role1");
-			login(client0, roleId);
+			ZezexTestEnv.auth(client0.onLinkConnectedFuture.get(), client0, "account0");
+			var role = ZezexTestEnv.getRole(client0);
+			var roleId = null != role ? role.getId() : ZezexTestEnv.createRole(client0, "role1");
+			ZezexTestEnv.login(client0, roleId);
 
 			sleep(200, 1);
 
 			// 角色下线时注册定时器
-			logout(client0, roleId);
+			ZezexTestEnv.logout(client0, roleId);
 
 			TestBean bean = new TestBean();
 			bean.resetFuture(5);
@@ -365,15 +271,15 @@ public class TestRoleTimer {
 
 			// 注册登录客户端1，踢掉客户端0的登录
 			log("注册登录客户端1");
-			auth(client1.onLinkConnectedFuture.get(), client1, "account0");
-			login(client1, roleId);
+			ZezexTestEnv.auth(client1.onLinkConnectedFuture.get(), client1, "account0");
+			ZezexTestEnv.login(client1, roleId);
 
 			sleep(200, 1);
 
-			logout(client1, roleId);
+			ZezexTestEnv.logout(client1, roleId);
 			sleep(200, 1);
 		} finally {
-			stopAll();
+			env.stopAll();
 		}
 	}
 
@@ -385,14 +291,14 @@ public class TestRoleTimer {
 			log("Role Offline Timer 测试启动");
 
 			// 初始化环境
-			prepareNewEnvironment(2, 2, 2);
+			env.prepareNewEnvironment(2, 2, 2);
 
-			var client0 = clients.get(0);
-			var client1 = clients.get(1);
-			var link0 = links.get(0);
-			var link1 = links.get(1);
-			var server0 = servers.get(0);
-			var server1 = servers.get(1);
+			var client0 = env.clients.get(0);
+			var client1 = env.clients.get(1);
+			var link0 = env.links.get(0);
+			var link1 = env.links.get(1);
+			var server0 = env.servers.get(0);
+			var server1 = env.servers.get(1);
 			var timer0 = server0.getZeze().getTimer();
 			var timer1 = server1.getZeze().getTimer();
 
@@ -401,15 +307,15 @@ public class TestRoleTimer {
 
 			// 注册登录客户端0
 			log("注册登录客户端0");
-			auth(client0.onLinkConnectedFuture.get(), client0, "account0");
-			var role = getRole(client0);
-			var roleId = role != null ? role.getId() : createRole(client0, "new_role1");
-			login(client0, roleId);
+			ZezexTestEnv.auth(client0.onLinkConnectedFuture.get(), client0, "account0");
+			var role = ZezexTestEnv.getRole(client0);
+			var roleId = role != null ? role.getId() : ZezexTestEnv.createRole(client0, "new_role1");
+			ZezexTestEnv.login(client0, roleId);
 
 			sleep(100, 1);
 
 			// 角色下线时注册定时器
-			logout(client0, roleId);
+			ZezexTestEnv.logout(client0, roleId);
 
 			TestBean bean = new TestBean();
 			bean.resetFuture(2);
@@ -423,14 +329,14 @@ public class TestRoleTimer {
 			bean.getFuture().await();
 			// 注册登录客户端1，踢掉客户端0的登录
 			log("注册登录客户端1");
-			auth(client1.onLinkConnectedFuture.get(), client1, "account0");
-			login(client1, roleId);
+			ZezexTestEnv.auth(client1.onLinkConnectedFuture.get(), client1, "account0");
+			ZezexTestEnv.login(client1, roleId);
 
 			sleep(100, 1);
-			logout(client1, roleId);
+			ZezexTestEnv.logout(client1, roleId);
 			sleep(100, 1);
 		} finally {
-			stopAll();
+			env.stopAll();
 		}
 	}
 
@@ -439,45 +345,6 @@ public class TestRoleTimer {
 		relogin.Argument.setRoleId(roleId);
 		relogin.SendForWait(app.ClientService.GetSocket(), 30_000).await();
 		Assertions.assertEquals(0, relogin.getResultCode());
-	}
-
-	private static void logout(ClientGame.App app, long roleIdForLogOnly) {
-		var logout = new Zeze.Builtin.Game.Online.Logout();
-		logout.SendForWait(app.ClientService.GetSocket(), 30_000).await();
-		Assertions.assertEquals(0, logout.getResultCode());
-	}
-
-	private static void login(ClientGame.App app, long roleId) {
-		var login = new Zeze.Builtin.Game.Online.Login();
-		login.Argument.setRoleId(roleId);
-		login.SendForWait(app.ClientService.GetSocket(), 30_000).await();
-		//System.out.println("login result: " + login.getResultCode());
-		Assertions.assertEquals(0, login.getResultCode());
-	}
-
-	private static void auth(BLoginToken.Data token, ClientGame.App app, String account) {
-		var auth = new Auth();
-		auth.Argument.setAccount(account);
-		auth.Argument.setLoginQueueToken(token.getToken());
-		auth.SendForWait(app.ClientService.GetSocket(), 30_000).await();
-		Assertions.assertEquals(0, auth.getResultCode());
-	}
-
-	private static long createRole(ClientGame.App app, String role) {
-		var createRole = new CreateRole();
-		createRole.Argument.setName(role);
-		createRole.SendForWait(app.ClientService.GetSocket(), 30_000).await();
-		Assertions.assertEquals(0, createRole.getResultCode());
-		return createRole.Result.getId();
-	}
-
-	private static BRole getRole(ClientGame.App app) {
-		var get = new GetRoleList();
-		get.SendForWait(app.ClientService.GetSocket(), 30_000).await();
-		Assertions.assertEquals(0, get.getResultCode());
-		if (get.Result.getRoleList().isEmpty())
-			return null;
-		return get.Result.getRoleList().getFirst();
 	}
 
 	private static void sleep(long gap, int times) {
